syntax = "proto3";

import "tasklet/services/ci/proto/ci.proto";
import "tasklet/api/tasklet.proto";

package alice.tasklet.generate_uniproxy_url_with_srcrwr;

message Srcrwr {
    string source = 1;
    string destination = 2;
}

message Data {
    string base_url = 1;
    repeated Srcrwr srcrwr = 2;
}

message Input {
    Data data = 2;
}

message State {
    bool success = 1;
    string generated_url = 2;
}

message Output {
    State state = 1;
}

message GenerateUniproxyUrlWithSrcrwr {
    option (.tasklet.tasklet_interface) = true;

    Input input = 1 [(.tasklet.input) = true];
    Output output = 2 [(.tasklet.output) = true];
}
